--- a/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
+++ b/MIST143_Traveler/Views/TransportationPage/TransportationHomePage.cshtml
@@ -70,32 +70,7 @@
             <div class="bc">
                 <div class="b">
                     <div>
-
-                    </div>
-                    <div>
-                        <select>
-                            <!-- onclick="clickTapei"台北轉運站 -->
-                            <option>南港站</option>
-                            <option>台北站</option>
-                            <option>台中站</option>
-                            <option>台南站</option>
-                            <option>嘉義站</option>
-                            <option>左營站</option>
-                            <option>彰化站</option>
-                            <option>新竹站</option>
-                            <option>板橋站</option>
-                            <option>桃園站</option>
-                            <option>苗栗站</option>
-                            <option>雲林站</option>
-                            </ul>
-                        </select>
-                    </div>
-
-                </div>
-                <div class="d">
-                    <img src="~/images/macImg/1372789.png" width="20px" height="20px">
-                    <div>
-                        <p>目的地</p>
+                        <p>出發站</p>
                         <div>
                             <select>
                                 <!-- onclick="clickTapei"台北轉運站 -->
@@ -113,26 +88,53 @@
                                 <option>雲林站</option>
                                 </ul>
                             </select>
+                            <span style="margin-left: 120px;">
+                                <img src="~/Images/macImg/1372789.png" input type="button" width="25px" height="25px" />
+                               
+                            </span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="c">
+                            <p>目的地</p>
+                            <div>
+                                <select>
+                                    <!-- onclick="clickTapei"台北轉運站 -->
+                                    <option>南港站</option>
+                                    <option>台北站</option>
+                                    <option>台中站</option>
+                                    <option>台南站</option>
+                                    <option>嘉義站</option>
+                                    <option>左營站</option>
+                                    <option>彰化站</option>
+                                    <option>新竹站</option>
+                                    <option>板橋站</option>
+                                    <option>桃園站</option>
+                                    <option>苗栗站</option>
+                                    <option>雲林站</option>
+                                    </ul>
+                                </select>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="c">
-                <div>
-                    <p>出發日期</p>
-                    <p>日期：<input type="text" id="datepicker"></p>
-                </div>
-                <div>
-                    <div class="e">
-                        <p>回程日期</p>
+                <div class="b">
+                    <div>
+                        <p>出發日期</p>
                         <p>日期：<input type="text" id="datepicker"></p>
                     </div>
+
+                    <div class="d">
+                        <div>
+                            <p>回程日期</p>
+                            <p>日期：<input type="text" id="datepicker"></p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-warning">搜尋</button>
                 </div>
             </div>
-
-        </div>
-        <div class="f">
-            <button type="button" class="btn btn-warning">搜尋</button>
         </div>
     </div>
     </div>
