--- a/MIST143_Traveler/wwwroot/css/017.css
+++ b/MIST143_Traveler/wwwroot/css/017.css
@@ -113,11 +113,8 @@ border-top: solid #c0c3c0;
 }
 
 .research .a {
-
     padding-bottom: 10px;
-    
     font-size: 14px;
-
 }
 
 .research .b {
@@ -131,28 +128,19 @@ border-top: solid #c0c3c0;
 }
 
 .research .c {
-    display: flex;
-    padding: 0px 40px 0px 0;
-    background-color: lemonchiffon;
-    border: 2px solid #f00;
-    font-size: 14px;
-    width: 960px;
-    border-radius: 5px;
-    margin-left: 2px;
+    margin-left: 50px;
 }
 
 .research .bc {
     display: flex;
     padding-top: 10px;
     font-size: 14px;
+    border: 2px solid blue;
     justify-content: space-around;
     width: 960px;
 }
 
 .research .d {
-    display: flex;
-    border: 2px solid #f00;
-    font-size: 14px;
     margin-left: 100px;
 }
 
@@ -169,6 +157,7 @@ border-top: solid #c0c3c0;
     text-align: right;
     width: 110px;
 }
+
 
 .research .wrap {
     width: 960px;
