--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -144,7 +144,7 @@
                     <div class="col-4 ">
                         <div class="rightSide ">
                             <div class="titleFontStyle">@Model.TravelProductName</div>
-                            <div class="subtext">@Model.EventIntroduction</div>
+                            @*<div class="subtext">@Model.EventIntroduction</div>*@
                             <div class="border-bottom-line"></div>
                             @*<div class="infoRow">
                                 <div class="subInfoText">日期</div>
