--- a/MIST143_Traveler/Views/CustomerCenter/CustomerInfo.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/CustomerInfo.cshtml
@@ -15,7 +15,7 @@
         <div class="box_body d-flex  mb-2">
             <div class="inputs p-2 flex-fill">
                 <header>EMAIL</header>
-                <input class="form-control" type="email" asp-for="Email" placeholder="123" aria-label="default input example" name="EMAIL">
+                <input class="form-control" type="email" asp-for="Email" placeholder="123" aria-label="default input example" name="EMAIL" disabled="disabled">
             </div>
         </div>
 
