--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -118,11 +118,12 @@
                         icon: 'error',
                         title: '輸入錯誤',
                         text: datas.msg,
-                        
+
                     })
                     return;
-                }
-                
+                } 
+                //todo 顯示剩下訂單
+                //$('cont').load( partialview)
               
                 window.location = "/Home/Index";
                 
