--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -45,16 +45,20 @@
                 <a href="@Url.Content("~/Shopping/ShoppingCart")">購物車</a>
 
                 @{
-                    if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
-                    {
-                        var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
-                        var v = JsonSerializer.Deserialize<Member>(OBJ);
+                        if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
+                        {
+                            var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+                            var v = JsonSerializer.Deserialize<Member>(OBJ);
+                            
                             <button class="btn btn-light dropdown-toggle"style="text-decoration:none;border:none" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
                                 橘子
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" style="color:white;text-decoration:none">
-                                <li><a href="@Url.ActionLink("List","CustomerCenter",new {v.MembersId})"class="dropdown-item bi bi-people" type="button">個人資訊</a></li>
+                                <li><a href="@Url.ActionLink("List","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-people" type="button">個人資訊</a></li>
+
                                 <li><a href="@Url.ActionLink("Order","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-bag" type="button">我的訂單</a></li>
+                                @*<li><a href="@Url.Content("~/CustomerCenter/Order?MembersID="+i)" class="dropdown-item bi bi-bag" type="button">我的訂單</a></li>*@
+
                                 <li><a href="@Url.ActionLink("Myfavorites","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-heart" type="button">我的最愛</a></li>
                                 <li><a href="@Url.ActionLink("Coupon","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-wallet2" type="button">優惠券</a></li>
                                 <li><a href="@Url.ActionLink("Review","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-chat-left-text" type="button">我的評論</a></li>
