--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -1,5 +1,4 @@
 
-﻿@*@model MIST143_Traveler.Models.Member*@
 @model MIST143_Traveler.Models.Member
 @using Microsoft.AspNetCore.Http
 @using System.Text.Json;
@@ -12,8 +11,14 @@
 
 <link href="~/css/會員中心/會員中心左邊選項.css" rel="stylesheet" />
 
+<script>
+        @{
+             var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+             var v = JsonSerializer.Deserialize<Member>(OBJ);
+        }
+</script>
 <body>
-
+   
     <article>
         <div class="container p-5">
             <div class="row">
@@ -22,11 +27,14 @@
                         <div>
                             <img src="@Url.Content("~/images/contact/大頭貼修改.png")" />
                         </div>
-                        <div class="card-body mb-3">
-                            <h5 class="card-title text-center">橘子</h5>
+                        <form asp-action="Edit" enctype="multipart/form-data">
+                            <div class="card-body mb-3">
 
-                            <input type="file" class="form-control" id="inputGroupFile02">
-                        </div>
+                                <h5 class="card-title text-center">橘子</h5>
+
+                                <input type="file" class="form-control" id="inputGroupFile02">
+                            </div>
+                        </form>
                     </div>
 
 
@@ -44,7 +52,7 @@
                 </div>
 
                 <div id="cont" class="col-12 col-md-9">
-                    
+
                     <div class="row row-cols-1">
                         <div class="col 上面空間">
                             <h3>個人資訊</h3>
@@ -56,7 +64,7 @@
                         <div class="box_body d-flex  mb-2">
                             <div class="inputs p-2 flex-fill">
                                 <header>EMAIL</header>
-                                <input class="form-control" type="email" asp-for="Email" placeholder="123" aria-label="default input example" name="EMAIL">
+                                <input class="form-control" type="email" asp-for="Email" placeholder="123" aria-label="default input example" name="EMAIL" disabled="disabled">
                             </div>
                         </div>
 
@@ -77,66 +85,6 @@
                                 <header>居住縣市</header>
                                 <select class="form-select" aria-label="Default select example" asp-for="CityId" id="CityId" name="CityName">
                                     @*<option>@Model.城市</option>*@
-                                </select>
-                            </div>
-
-
-                            <div class="inputs p-2 flex-grow-1">
-                                <header>地址</header>
-                                <input class="form-control" type="text" asp-for="Address" id="Address" placeholder="北投區111號" aria-label="default input example" name="Address">
-                            </div>
-                        </div>
-
-                        <div class="box_body d-flex  mb-2">
-                            <div class="inputs p-2 flex-fill">
-                                <header>重設密碼</header>
-                                <input class="form-control" type="text" id="Password" placeholder="password" aria-label="default input example">
-                            </div>
-
-                            <div class="inputs p-2 flex-fill">
-                                <header>再次確認密碼</header>
-                                <input class="form-control" type="text" placeholder="password" aria-label="default input example">
-                            </div>
-                        </div>
-
-                        <div class="d-flex mb-3">
-                            <div class="me-auto p-2">
-                                <button type="submit" class="btn btn-warning 按鈕顏色" id="send" onclick="bb()">儲存</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row row-cols-1">
-                        <div class="col 上面空間">
-                            <h3>個人資訊</h3>
-                            <p>以下資訊僅用於幫助你在付款時自動填寫你的個人資料，你的資料將會安全地保存且不會公開</p>
-                        </div>
-                        <div class="form-group">
-                            <input asp-for="MembersId" name="MembersId" id="MembersId" class="form-control" type="hidden" />
-                        </div>
-                        <div class="box_body d-flex  mb-2">
-                            <div class="inputs p-2 flex-fill">
-                                <header>EMAIL</header>
-                                <input class="form-control" type="email" asp-for="Email" placeholder="123" aria-label="default input example" name="EMAIL">
-                            </div>
-                        </div>
-
-                        <div class="box_body d-flex  mb-2">
-
-                            <div class="inputs p-2 flex-fill">
-                                <header>名稱</header>
-                                <input class="form-control" asp-for="MemberName" type="text" placeholder="名稱" id="MemberName" aria-label="default input example" name="MemberName">
-                            </div>
-                            <div class="inputs p-2 flex-fill">
-                                <header>聯繫電話</header>
-                                <input class="form-control" type="text" asp-for="Phone" placeholder="PHONE" id="Phone" aria-label="default input example" name="PHONE">
-                            </div>
-                        </div>
-
-                        <div class="box_body d-flex  mb-2">
-                            <div class="inputs p-2 ">
-                                <header>居住縣市</header>
-                                <select class="form-select" aria-label="Default select example" asp-for="CityId" id="CityId" name="CityName">
                                 </select>
                             </div>
 
@@ -225,10 +173,9 @@
           })
              }
            LoadCities()
+      
 
 
-        @{var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
-                var v = JsonSerializer.Deserialize<Member>(OBJ); }
         $('#btncus').click(function () {
 
             $('#cont').load('@Url.Action("CustomerInfo","CustomerCenter",new {v.MembersId})')
@@ -241,33 +188,7 @@
              $('#btnorder').removeClass("active")
     })
 
-        @*$('#btnorder').click(function () {
-            $('#cont').load(
-            $.ajax({
-            url:'@Url.Action("Order","CustomerCenter",new {v.MembersId})',
-            method: 'Post',
-            dataType: 'int',
-            )
-        })*@
-        @*const btnord = document.querySelector("#btnorder")
-        btnord.addEventListener("click", async () => {
-            let response = await fetch('@Url.Action("Order","CustomerCenter",new {v.MembersId})')
-            let result = await response.json()
-
-            let htmldatas = result.map(data => {
-                return (`<tr>${data[0]}</tr>`)
-            })
-            console.log(result)
-
-            console.log(htmldatas[0])
-            cont.innerHTML = htmldatas
-        })*@
-
-        @*$('#btnorder').click(function () {
-            $.getJSON('@Url.Content("~/CustomerCenter/Order")', { "MembersId": "v.MembersId" }, function (datas) {
-                console.log(datas)
-            })
-        })*@
+      
 
         $('#btnorder').click(function () {
             $('#cont').load('@Url.Action("Order","CustomerCenter",new {v.MembersId})')
@@ -278,6 +199,10 @@
         $('#btncop').removeClass("active")
         $('#btncus').removeClass("active")
     })
+        @*$('#btnorder').click(function () {
+           "@Url.ActionLink("Order","CustomerCenter",new {v.MembersId})"
+    })*@
+
 
     $('#btnlove').click(function () {
         $('#cont').load('@Url.Content("~/CustomerCenter/Myfavorites")')
