--- a/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
@@ -1,17 +1,22 @@
 ﻿@model IEnumerable<MIST143_Traveler.Models.Order>
-
+@using Microsoft.AspNetCore.Http
+@using System.Text.Json;
+@inject IHttpContextAccessor Accessor
 @{
     ViewData["Title"] = "Default";
 }
 
-
+@*<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+        crossorigin="anonymous"></script>*@
 
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderId)
-            </th>
+
+
+
+
             <th>
                 @Html.DisplayNameFor(model => model.OrderDetailId)
             </th>
@@ -28,36 +33,48 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDetailId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MemberId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderStatusId)
-            </td>
-            <td>
-                @Html.ActionLink("刪除", "Delete", "CustomerCenter", new { id = item.OrderId, MemberId = item.MemberId },
-                    new { onclick = "return confirm('確定要刪除?')",id="de"})
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+
+                <td>
+
+                    @Html.DisplayFor(modelItem => item.OrderDetailId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MemberId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderStatusId)
+                </td>
+                <td>
+                    <button class="delete" value="@item.OrderId">刪除</button>
+                    @*@Html.ActionLink("刪除", "Delete", "CustomerCenter", new { id = item.OrderId, MemberId = item.MemberId },
+                        new { onclick = "return confirm('確定要刪除?')",id="de"})*@
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
-@section Scripts{ 
-    <script>
-        $('#de').click(function () {
-            $('#cont').load('@Url.Action("List","CustomerCenter")')
+@*@section Scripts{*@
 
-    </script>
+<script>
 
+
+
+@{
+    var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+    var v = JsonSerializer.Deserialize<Member>(OBJ);
 }
+    $(".delete").click(function () {
+        const orderId = $(this)/*.closest("td").siblings().find(".OId")*/.val();
+        $('#cont').load("@Url.Content("~/CustomerCenter/Order")" + `?MembersId=${@v.MembersId}&OrderId=${orderId}`);
+    });
+        
+
+</script>
+
+@*}*@
