--- a/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
@@ -60,7 +60,7 @@
                     <div class="box_body d-flex  mb-2">
                         <div class="inputs p-2 ">
                             <header>居住縣市</header>
-                            <select id="selectC" class="form-select" aria-label="Default select example" name="城市">
+                            <select id="selectC" class="form-select" aria-label="Default select example" name="Cityname">
                             </select>
                         </div>
 
