--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
           crossorigin="anonymous" />
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
@@ -45,27 +46,27 @@
                 <a href="@Url.Content("~/Shopping/ShoppingCart")">購物車</a>
 
                 @{
-                        if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
-                        {
-                            var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
-                            var v = JsonSerializer.Deserialize<Member>(OBJ);
-                            
-                            <button class="btn btn-light dropdown-toggle"style="text-decoration:none;border:none" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                                橘子
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" style="color:white;text-decoration:none">
-                                <li><a href="@Url.ActionLink("List","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-people" type="button">個人資訊</a></li>
+                    if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
+                    {
+                        var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+                        var v = JsonSerializer.Deserialize<Member>(OBJ);
 
-                                <li><a href="@Url.ActionLink("Order","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-bag" type="button">我的訂單</a></li>
-                                @*<li><a href="@Url.Content("~/CustomerCenter/Order?MembersID="+i)" class="dropdown-item bi bi-bag" type="button">我的訂單</a></li>*@
+                        <button class="btn btn-light dropdown-toggle" style="text-decoration:none;border:none" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                            @v.MemberName
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" style="color:white;text-decoration:none">
+                            <li><a href="@Url.ActionLink("List","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-people" type="button">會員專區</a></li>
 
-                                <li><a href="@Url.ActionLink("Myfavorites","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-heart" type="button">我的最愛</a></li>
-                                <li><a href="@Url.ActionLink("Coupon","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-wallet2" type="button">優惠券</a></li>
-                                <li><a href="@Url.ActionLink("Review","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-chat-left-text" type="button">我的評論</a></li>
-                                <li><a href="@Url.ActionLink("Star","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-star" type="button">STAR積分</a></li>
-                                <li><a href="@Url.ActionLink("Coupon","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-star" type="button">登出</a></li>
-                            </ul>
-                      
+                            <li><a href="@Url.ActionLink("PayData","Shopping",new {v.MembersId})" class="dropdown-item bi bi-bag" type="button">購物車</a></li>
+                            @*<li><a href="@Url.Content("~/CustomerCenter/Order?MembersID="+i)" class="dropdown-item bi bi-bag" type="button">我的訂單</a></li>*@
+
+                            <li><a href="@Url.ActionLink("Myfavorites","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-heart" type="button">我的最愛</a></li>
+                            <li><a href="@Url.ActionLink("Coupon","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-wallet2" type="button">優惠券</a></li>
+                            <li><a href="@Url.ActionLink("Review","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-chat-left-text" type="button">我的評論</a></li>
+                            <li><a href="@Url.ActionLink("Star","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-star" type="button">STAR積分</a></li>
+                            <li><a href="@Url.ActionLink("Coupon","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-star" type="button">登出</a></li>
+                        </ul>
+
 
 
                         @*<a class="btn btn-outline-light" href="@Url.Content("~/Home/Index")">登出</a>*@
@@ -201,19 +202,19 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
           media="screen" />
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    @*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
+
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/jquery.unobtrusive-ajax.min.js"></script>
+    @*<script src="~/js/jquery.unobtrusive-ajax.min.js"></script>*@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
             crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/&#64;popperjs/core@2.11.6/dist/umd/popper.min.js"
             integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
             crossorigin="anonymous"></script>
-  
 
-
-
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
