--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -162,6 +162,7 @@
                                         <div class="my-3">
                                             <div class="titleFontStyle">NT$ <span id="totalPrice">0</span></div>
                                             <div class="subInfoText">完成所有必填選項</div>
+                                            <div class="subInfoText">剩餘:  @Model.產品列表.FirstOrDefault().Stocks 個位置</div>
                                         </div>
                                         <div class="rightBtns">
                                             <button type="button" class="btn btn-main" data-bs-toggle="modal" data-bs-target="#joinModal">加入購物車</button>
@@ -179,6 +180,9 @@
             <div class="下面一包">
                 <div class="活動DIV">
                     <h2><span class="一條根"> </span><span>活動介紹</span></h2>
+                </div>
+                <div class="小介紹">
+                    @Model.產品列表.FirstOrDefault().EventIntroduction
                 </div>
                 @foreach (var item in Model.產品列表.FirstOrDefault().productpictures)
                 {
@@ -224,69 +228,69 @@
                 <iframe src="@Model.產品列表.FirstOrDefault().MapUrl" width="850" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <div class="活動DIV">
                     <h2><span class="一條根"> </span><span>活動評價</span></h2> @*i love apple*@
-                <div class="評論">
-                    <div class="card mb-3" style="max-width: 850px;">
-                        <div class="row g-0">
+                    <div class="評論">
+                        <div class="card mb-3" style="max-width: 850px;">
+                            <div class="row g-0">
 
-                            <div class="col-md-1">
-                                <img src="~/Images/Product/_.jpg" class="img-fluid rounded-start" alt="...">
-                            </div>
+                                <div class="col-md-1">
+                                    <img src="~/Images/Product/_.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
 
-                            <div class="col-md-10">
-                                <div class="card-body">
-                                    <h5 class="card-title">恆佑</h5>
-                                    <img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" />
-                                    <p class="card-text">視野極佳很好拍照，風景可讓人放鬆，是不錯的選擇，室內環境很乾淨，可在加購101層票券，第一次體驗88～89樓和101樓層拍照，個人覺得很美很舒適。</p>
-                                    <p class="card-text"><small class="text-muted">2022/5/35</small></p>
+                                <div class="col-md-10">
+                                    <div class="card-body">
+                                        <h5 class="card-title">恆佑</h5>
+                                        <img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" />
+                                        <p class="card-text">視野極佳很好拍照，風景可讓人放鬆，是不錯的選擇，室內環境很乾淨，可在加購101層票券，第一次體驗88～89樓和101樓層拍照，個人覺得很美很舒適。</p>
+                                        <p class="card-text"><small class="text-muted">2022/5/35</small></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
+                        <div class="card mb-3" style="max-width: 850px;">
+                            <div class="row g-0">
+
+                                <div class="col-md-1">
+                                    <img src="~/Images/Product/_.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+
+                                <div class="col-md-10">
+                                    <div class="card-body">
+                                        <h5 class="card-title">恆佑</h5>
+                                        <img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" />
+                                        <p class="card-text">視野極佳很好拍照，風景可讓人放鬆，是不錯的選擇，室內環境很乾淨，可在加購101層票券，第一次體驗88～89樓和101樓層拍照，個人覺得很美很舒適。</p>
+                                        <p class="card-text"><small class="text-muted">2022/5/35</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card mb-3" style="max-width: 850px;">
+                            <div class="row g-0">
+
+                                <div class="col-md-1">
+                                    <img src="~/Images/Product/_.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+
+                                <div class="col-md-10">
+                                    <div class="card-body">
+                                        <h5 class="card-title">恆佑</h5>
+                                        <img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" />
+                                        <p class="card-text">視野極佳很好拍照，風景可讓人放鬆，是不錯的選擇，室內環境很乾淨，可在加購101層票券，第一次體驗88～89樓和101樓層拍照，個人覺得很美很舒適。</p>
+                                        <p class="card-text"><small class="text-muted">2022/5/35</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
-                    <div class="card mb-3" style="max-width: 850px;">
-                        <div class="row g-0">
-
-                            <div class="col-md-1">
-                                <img src="~/Images/Product/_.jpg" class="img-fluid rounded-start" alt="...">
-                            </div>
-
-                            <div class="col-md-10">
-                                <div class="card-body">
-                                    <h5 class="card-title">恆佑</h5>
-                                    <img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" />
-                                    <p class="card-text">視野極佳很好拍照，風景可讓人放鬆，是不錯的選擇，室內環境很乾淨，可在加購101層票券，第一次體驗88～89樓和101樓層拍照，個人覺得很美很舒適。</p>
-                                    <p class="card-text"><small class="text-muted">2022/5/35</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card mb-3" style="max-width: 850px;">
-                        <div class="row g-0">
-
-                            <div class="col-md-1">
-                                <img src="~/Images/Product/_.jpg" class="img-fluid rounded-start" alt="...">
-                            </div>
-
-                            <div class="col-md-10">
-                                <div class="card-body">
-                                    <h5 class="card-title">恆佑</h5>
-                                    <img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" /><img src="~/Images/Product/一顆星.png" />
-                                    <p class="card-text">視野極佳很好拍照，風景可讓人放鬆，是不錯的選擇，室內環境很乾淨，可在加購101層票券，第一次體驗88～89樓和101樓層拍照，個人覺得很美很舒適。</p>
-                                    <p class="card-text"><small class="text-muted">2022/5/35</small></p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="活動DIV">
+                        <h2><span class="一條根"> </span><span>常見問題</span></h2>
                     </div>
 
                 </div>
-
-                <div class="活動DIV">
-                    <h2><span class="一條根"> </span><span>常見問題</span></h2>
-                </div>
-
             </div>
-        </div>
         <!-- 已加入購物車訊息彈窗 -->
         <div class="modal fade" id="joinModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
              style="display: none;">
@@ -312,6 +316,24 @@
             <script src="https://code.jquery.com/jquery-3.6.1.js"
                     integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
             <script src="~/js/travelOrder.js"></script>
+            <script>
+                $('#adultPlus').click(function () {
+                    let currentNum = parseInt($('#adultNum').text())
+                    currentNum += 1
+                    $('#adultNum').text(currentNum)
+
+                    $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
+                });
+                $('#adultMinus').click(function () {
+                    let currentNum = parseInt($('#adultNum').text())
+                    if (currentNum > 0) {
+                        currentNum -= 1
+                        $('#adultNum').text(currentNum)
+                    }
+                    $('#totalPrice').text(currentNum * @Model.產品列表.FirstOrDefault().Price)
+                    console.log($('#adultNum').text())
+                });
+            </script>
         }
     </body>
 
