--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -59,6 +59,19 @@
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
                                                id="flexRadioDefault2">
                                         <label class="form-check-label" for="flexRadioDefault2">
+                                            街口支付
+                                        </label>
+                                    </div>
+                                    <div class="logo">
+                                        <img src="~/Images//Shopping/街口支付.png">
+                                    </div>
+                                </div>
+                                <div class="border-bottom-line"></div>
+                                <div class="payTypeRow">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                               id="flexRadioDefault2">
+                                        <label class="form-check-label" for="flexRadioDefault2">
                                             LINE Pay
                                         </label>
                                     </div>
