--- a/MIST143_Traveler/Views/Shopping/testPage.cshtml
+++ b/MIST143_Traveler/Views/Shopping/testPage.cshtml
@@ -1,13 +1,13 @@
 ﻿
-@model MIST143_Traveler.MViewModel.CProductxViewModel
+@model MIST143_Traveler.MViewModel.CProductMemberViewModel
 @{
     ViewData["Title"] = "testPage";
 }
 
 <h1>testPage</h1>
 
-@foreach (var item in Model.產品列表.FirstOrDefault().productpictures)
+@*@foreach (var item in Model.產品列表.FirstOrDefault().productpictures)
 {
     <img src="https://localhost:44338/images/TravelProductPictures/@item.TravelPicture1" />
-}
+}*@
 
