--- a/MIST143_Traveler/Views/Shopping/PayData.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayData.cshtml
@@ -1,4 +1,4 @@
-﻿@model MIST143_Traveler.MViewModel.CProductxViewModel
+﻿@model MIST143_Traveler.MViewModel.CProductMemberViewModel
 
 @{
     ViewData["Title"] = "PayData";
@@ -39,12 +39,12 @@
 
                             <div class="infoBoxInner reserveBlock">
                                 <div class="imgBox">
-                                    <img src="https://localhost:44338/images/TravelProductPictures/@Model.產品列表.FirstOrDefault().productpictures.FirstOrDefault().TravelPicture1"
+                                    <img src="https://localhost:44338/images/TravelProductPictures/@Model.產品會員.FirstOrDefault().productpictures.FirstOrDefault().TravelPicture1"
                                          class="rounded float-start" alt="...">
                                 </div>
                                 <div class="infoBox">
-                                    <div class="titleFontStyle">@Model.產品列表.FirstOrDefault().TravelProductName</div>
-                                    <div class="subText">@Model.產品列表.FirstOrDefault().EventIntroduction</div>
+                                    <div class="titleFontStyle">@Model.產品會員.FirstOrDefault().TravelProductName</div>
+                                    @*<div class="subText">@Model.產品列表.FirstOrDefault().EventIntroduction</div>*@
                                 </div>
                             </div>
                         </div>
@@ -106,9 +106,9 @@
                                         <div>電子郵件</div>
                                     </div>
                                     <div class="rightUserInfoBox">
-                                        <div>林恆佑</div>
-                                        <div>0912345678</div>
-                                        <div>KKKK@gmail.com</div>
+                                        <div>@Model.產品會員.FirstOrDefault().MemberName</div>
+                                        <div>@Model.產品會員.FirstOrDefault().Phone</div>
+                                        <div>@Model.產品會員.FirstOrDefault().Email</div>
                                     </div>
                                     <div class="editBox">
                                         <button type="button" class="btn btn-main-outline" data-bs-toggle="modal"
@@ -125,14 +125,14 @@
                         <div class="payInfoRow p-3">
                             <div>點擊「前往付款」，訂單即送出，請於下一步選擇付款方式</div>
                             <button type="button" class="btn btn-main">
-                                <a class="buttonInnderA" href="@Url.Action("PayCheckout" ,"shopping", new { Model.產品列表.FirstOrDefault().TravelProductId })">前往付款</a>
+                                <a class="buttonInnderA" href="@Url.Action("PayCheckout" ,"shopping", new { Model.產品會員.FirstOrDefault().TravelProductId })">前往付款</a>
                             </button>
                         </div>
                     </div>
                 </div>
                 <div class="col-4 ">
                     <div class="rightSide ">
-                        <div class="titleFontStyle">@Model.產品列表.FirstOrDefault().TravelProductName</div>
+                        <div class="titleFontStyle">@Model.產品會員.FirstOrDefault().TravelProductName</div>
                         @*<div class="subtext">@Model.產品列表.FirstOrDefault().EventIntroduction</div>*@
                         <div class="border-bottom-line"></div>
                         @*<div class="infoRow">
@@ -147,7 +147,7 @@
                         <div class="border-bottom-line"></div>
                         <div class="infoRow">
                             <div class="subInfoText">總價</div>
-                            <div class="titleFontStyle">NT$ @Model.產品列表.FirstOrDefault().Price.ToString("###,###,##0")</div>
+                            <div class="titleFontStyle">NT$ @Model.產品會員.FirstOrDefault().Price.ToString("###,###,##0")</div>
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,8 @@
                         <form>
                             <div class="mb-3">
                                 <label class="col-form-label">姓名:<span class="color-main"> *</span></label>
-                                <input type="text" class="form-control" value="林恆佑">
+                                <input type="text" class="form-control" value="@Model.產品會員.FirstOrDefault().MemberName">
+
                             </div>
                             <div class="mb-3">
                                 <label class="col-form-label">
@@ -211,7 +212,7 @@
                                         *
                                     </span>
                                 </label>
-                                <input type="text" class="form-control" value="0912345678">
+                                <input type="text" class="form-control" value="@Model.產品會員.FirstOrDefault().Phone">
                             </div>
                             <div class="mb-3">
                                 <label class="col-form-label">
@@ -219,7 +220,7 @@
                                         *
                                     </span>
                                 </label>
-                                <input type="text" class="form-control" value="KKKK@gmail.com">
+                                <input type="text" class="form-control" value="@Model.產品會員.FirstOrDefault().Email">
                             </div>
                         </form>
                     </div>
